first commit lol - base ui layout - basic api integration - custom logo

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,9 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #eee;
   --foreground: #171717;
+  --safe-area: 80%;
 }
 
 @theme inline {
@@ -15,7 +16,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #eee;
   }
 }
 
